assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto&display=swap');

* {
    margin: 0;
    padding:0;
    border: none; 
}
html {
    overflow-x: hidden !important; 
}

body{
    font-family: Montserrat, sans-serif;
    font-weight:300;
}
h1{
  font-family:Lato, sans-serif;
  font-size: large;
  letter-spacing: 2px;
  
}
q, span {
  font-size:100%;
  text-justify:newspaper;
  font-family:Montserrat, sans-serif;
  font-weight:300;
  text-align: center;
  letter-spacing: none;
  line-height: 1.8;
  margin-top: 5%;
  padding: 14px 20px;
  margin: 8px 0;
  position:center;
  bottom: 10px;
 
  
}
.column p{
  font-size:large;
  font-family:Montserrat, sans-serif;
  font-weight:300;
  text-align: left;
  letter-spacing: 1px;
  
}
.logo {     
    margin: 0;
    display: block;
    margin-left: auto;
    margin-right: auto;    
}

.hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
    url("../images/hero-image.webp");
    height: 100vh;
    width: 100vw;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;     
}

.button {
    text-align:center;   
    position: absolute;
    bottom: 10px;
    border-radius: 8px;
    left: 45%;
    padding: 10px;
    width: 120px;
    transition: all 0.2s;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    cursor: pointer;
    opacity: 0.9;
  }

button:hover {
    opacity:1;
}

/* The navbar */
.nav {
    border:1px solid #ccc;
    border-width:1px 0;
    list-style:none;
    margin:0;
    padding:0;
    text-align:center;
}
.nav li{
    display:inline;
}
  
  /* Navbar links */
.nav a {
    color: #f2f2f2;
    text-align: center;
    display:inline-block;
    padding:10px;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}
  
.nav a:hover {
    background-color: #ddd;
    color: black;
}

  /*intro text*/
.align-center-title h1{
  text-align:center;
  font-size: 2.2rem;
  font-weight:800;
  margin-top: 0;
  color:rgb(203,216,198);
  background: none;
  
  font-family:Shadows Into Light, cursive
}
  
  /*studio ethos 2 column section*/
.outer-bg-color-light-green{
  background-color:rgb(203,216,198);
}
.outer-bg-color-beige{
  background-color: rgb(235,236,225);
}
/* images used on split section*/
.inner-col-2-split{
  border:2px;
  width:49%;
  float:left;
  height:80%;
  background-size:cover;   
  background-repeat: no-repeat; 
  overflow-x: hidden;
}
.left-image{
  background-image:url("../images/split-left.webp");   
}
.right-image{
  background-image:url("../images/split-right.webp");
}
.left-text{
  font-size: 1.7rem; 
}
.right-text{ 
  font-size: 2.0rem;   
}

/*class categories*/
.column {
  flex: 50%;
  padding: 10px;
  height: 400px;
}

/* Clear floats after the columns */
.row {
  display: flex;
  border:2px;  
}

.col-3-card .column {
  float: left;
  width: 25%;
  padding: 0 10px;
  box-sizing: border-box;
  margin-right: 1%;
  margin-left:1%;
  
}
.col-3-card .row {margin: 0 -5px;}

/* Clear floats after the columns */
.col-3-card .row:after {
  content: "";
  display: table;
  clear: both;
}
 /*Yoga class type description*/

 
.card{
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
  padding: 16px;
  text-align: center;
  height:91%;
  margin-bottom:-20%;
  padding-bottom: 0 8px;
  z-index: 10;
}

.card_info{
  z-index: 10;  
  opacity: 0.5;
  padding: 20px 15px;
  height:60%;
}
.card_info p{
  font-weight: 400;
}


h5 {
    transition: 300ms ease-in-out;
  }

  /*Footer*/
footer {
  height: 150px;
}

.footer-logo{
  margin-bottom: 0%;
  bottom: 15px;
  float:left;
  margin-left:1%;
  margin-top:3%;
}
.socials-list, .copyrights {
  text-align: center; 
  
}
.socials-list > li {
  display: inline;
  text-align: center;
}

.copyrights{
  margin-top:1%;
}
.socials-list i {
  font-size: 140%;
  margin: 1%;
  padding: 2%;
  color: #3a3a3a; 
}


/*about us page*/
.about-image{
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
  url("../images/about-image.webp");
  height:100vh;
  width: 100vw;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;     
}

.about h1{
  text-align:center;  
  position: absolute;
  bottom: 10px;
  border-radius: 8px;
  left: 45%;
  padding: 10px;
}
/*class page*/
.class-image{
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
  url("../images/class-image.webp");
  height:100vh;
  width: 100vw;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;     
}

.class h1{
  text-align:center;  
  position: absolute;
  bottom: 10px;
  border-radius: 8px;
  left: 45%;
  padding: 10px;
}
/*prices page*/
.prices-image{
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
  url("../images/prices-image.webp");
  height:50vh;
  width: 100vw;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;     
}

.membership-list{
  list-style-type:none;
  text-align: center;
}

/*schedule page*/
.schedule-image{
  background-color: rgb(203,216,198);
  height:50vh;
  width: 100vw;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;     
}

/*contact page*/
.contact-image{
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
  url("../images/contact-image.webp");
  height:50vh;
  width: 100vw;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;     
}

.contact-address{
  margin-left:1.0rem;
  text-align: left;

}
.contact-list i{
    font-size: 130%;   
    padding: 2%;
    color: #3a3a3a;
    text-align:center;   

}

.form-block{
  text-align: left;
  border-radius: 2px;
  background-color: #f2f2f2;
  padding: 20px;
  box-sizing: border-box;
}

input[type=text], select, textarea {
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
}

input[type=submit] {
  background-color: #04AA6D;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.required {
  border: none;
  cursor: default; 
}



.form-block h5 {
  margin-bottom: 4.0rem;
  text-align: center;
  margin-left: auto;
}

/*maps*/

 iframe{
  padding: 0 !important;
  margin-left: 0.2%;
  margin-right:0.2%;
 }


/*media*/
@media only screen and (max-width: 640px) {
  iframe {
    height: 300px;
    min-height: 0; } }

